--- a/ProjectApp/LogIn.xaml
+++ b/ProjectApp/LogIn.xaml
@@ -1,4 +1,6 @@
 ﻿<Window x:Class="ProjectApp.LogIn"
+        
+        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,13 +23,18 @@
             <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="60" FontFamily="Inter" BorderThickness="1" Foreground="White" Content="Log In"/>
         </Border>
         <Border Margin="345,307,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="93"  CornerRadius="50"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" BorderBrush="Transparent" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Username"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+            <TextBox x:Name="username" Margin="0,15,0,0" BorderBrush="Transparent" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Username"  Width="590"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
         </Border>
         <Border Margin="345,431,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="93"  CornerRadius="50"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" BorderBrush="Transparent" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Password"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+            <PasswordBox x:Name="password" 
+                         
+                         Style="{DynamicResource MaterialDesignFloatingHintRevealPasswordBox}"
+                         Margin="22,-6" Foreground="#AAADC4"   HorizontalAlignment="Center" Height="80"
+                         Width="534"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight"
+                         FontSize="24" ></PasswordBox>
         </Border>
         <Border Margin="345,564,0,0"  Background="#AAADC4" BorderBrush="#AAADC4"  Height="59"  CornerRadius="40"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Button BorderBrush="Transparent" Foreground="White" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Log In" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59"/>
+            <Button BorderBrush="Transparent" Foreground="White" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Log In" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59" Click="Button_Click"/>
         </Border>
     </Grid>
 
