--- a/ProjectApp/LogInDetails.xaml
+++ b/ProjectApp/LogInDetails.xaml
@@ -21,18 +21,14 @@
             <TextBlock Margin="0,15,0,0" Foreground="White"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Date of last Log In"  Width="400"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24"/>
         </Border>
         <Border Margin="537,424,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="400" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="New Password"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+            <TextBox x:Name="newPsswrd" Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="New Password"  Width="590"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
         </Border>
 
         <Border Margin="537,494,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="400" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Confirm New Password"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+            <TextBox x:Name="confirmNewPsswrd" Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Confirm New Password"  Width="590"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
         </Border>
 
-        <Border Margin="537,351,0,0"  Background="#AAADC4" BorderThickness="0" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="400" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBlock Margin="0,15,0,0" Foreground="White"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Password"  Width="400"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24"/>
-        </Border>
 
-        
 
 
         <Border Margin="345,282,0,0"  Background="#AAADC4"  Height="53"  CornerRadius="30"  Width="181" HorizontalAlignment="Left" VerticalAlignment="Top">
@@ -50,23 +46,27 @@
 
 
         <Border Margin="345,564,0,0"  Background="#AAADC4" BorderBrush="#AAADC4"  Height="59"  CornerRadius="40"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Button BorderBrush="Transparent" Foreground="White" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Confirm Changes" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59"/>
+            <Button BorderBrush="Transparent" Foreground="White" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Confirm Changes" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59" Click="Button_Click_2"/>
         </Border>
 
 
-        <Button Height="72" Width="72" Margin="1203,0,0,732" Foreground="#8D909B" BorderBrush="Transparent" >
+        <Button Height="72" Width="72" Margin="1203,0,0,732" Foreground="#8D909B" BorderBrush="Transparent" Click="Button_Click_1" >
             <Button.Background>
                 <ImageBrush ImageSource="Screenshot 2023-02-21 105159.png"/>
             </Button.Background>
         </Button>
 
-        <Button Height="72" Width="72" Margin="1106,0,95.333,730.667" Foreground="#8D909B" BorderBrush="Transparent" >
+        <Button Height="72" Width="72" Margin="1106,0,95.333,730.667" Foreground="#8D909B" BorderBrush="Transparent" Click="Button_Click" >
             <Button.Background>
                 <ImageBrush ImageSource="Screenshot 2.png"/>
             </Button.Background>
 
         </Button>
 
+        
+        
+        
+        
 
         <Ellipse HorizontalAlignment="Left" Height="277" Width="212" Margin="1171,326,0,0"
                Stroke="#FFA53860" VerticalAlignment="Top"  Fill="#FFA53860"/>
@@ -76,5 +76,8 @@
                Stroke="#FFA53860" VerticalAlignment="Top"  Fill="#FFA53860"/>
         <Ellipse HorizontalAlignment="Left" Height="81" Width="85" Margin="217,228,0,0"
                Stroke="#FFA53860" VerticalAlignment="Top"  Fill="#FFA53860"/>
+        <Border Margin="537,351,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="400" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <TextBox x:Name="oldPsswrd" Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Current Password"  Width="590"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+        </Border>
     </Grid>
 </Window>
