--- a/ProjectApp/MainWindow.xaml
+++ b/ProjectApp/MainWindow.xaml
@@ -1,10 +1,20 @@
 ﻿<Window x:Class="ProjectApp.MainWindow"
+        
+            TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+     TextElement.FontWeight="Regular"
+     TextElement.FontSize="13"
+     TextOptions.TextFormattingMode="Ideal"
+     TextOptions.TextRenderingMode="Auto"
+     Background="{DynamicResource MaterialDesignPaper}"
+     FontFamily="{DynamicResource MaterialDesignFont}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectApp"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+ 
         Title="SignUp" Height="832" Width="1280" ResizeMode="NoResize">
     <Grid>
 
@@ -15,28 +25,19 @@
         <Border Margin="344,166,0,0"  Background="#8D909B" BorderBrush="#8D909B"  Height="98"  CornerRadius="40"  Width="591" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="60" FontFamily="Inter" BorderThickness="1" Foreground="White" Content=" Sign Up"/>
         </Border>
-        
-        
+
+
         <Border Margin="345,282,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Email"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+            <TextBox x:Name="email" Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Email"  Width="590"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
         </Border>
         <Border Margin="345,351,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Username"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+            <TextBox x:Name="username" Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Username"  Width="590"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
         </Border>
-        <Border Margin="345,424,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Password"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
+        <Border Margin="345,616,0,0"  Background="#AAADC4" BorderBrush="#AAADC4"  Height="59"  CornerRadius="40"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Button BorderBrush="Transparent" Foreground="White" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Sign Up" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59" Click="Button_Click"/>
         </Border>
-        <Border Margin="345,494,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBox Margin="0,15,0,0" Foreground="#AAADC4"  Background="Transparent" HorizontalAlignment="Center" TextAlignment="Center"  Height="53"  TextWrapping="Wrap" Text="Confirm Password"  Width="590" TextChanged="TextBox_TextChanged" VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight" FontSize="24" />
-        </Border>
-
-        
-        <Border Margin="345,564,0,0"  Background="#AAADC4" BorderBrush="#AAADC4"  Height="59"  CornerRadius="40"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Button BorderBrush="Transparent" Foreground="White" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Sign Up" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59"/>
-        </Border>
-
-        <Border Margin="345,628,0,0"  Background="White" BorderThickness="0" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Button BorderBrush="Transparent" Foreground="#AAADC4" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Already have an account? Log in!" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59"/>
+        <Border Margin="345,680,0,0"  Background="White" BorderThickness="0" BorderBrush="#AAADC4"  Height="53"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Button BorderBrush="Transparent" Foreground="#AAADC4" FontFamily="Leelawadee UI Semilight" FontSize="24" Background="Transparent" Content="Already have an account? Log in!" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="590" Height="59" Click="Button_Click_1"/>
         </Border>
 
 
@@ -48,5 +49,30 @@
                Stroke="#FFA53860" VerticalAlignment="Top"  Fill="#FFA53860"/>
         <Ellipse HorizontalAlignment="Left" Height="81" Width="85" Margin="217,228,0,0"
                Stroke="#FFA53860" VerticalAlignment="Top"  Fill="#FFA53860"/>
+
+        <Border Margin="345,424,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="80"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <PasswordBox x:Name="password" 
+                         materialDesign:HintAssist.Hint="Password"
+                         materialDesign:HintAssist.Foreground="#AAADC4"
+                         materialDesign:TextFieldAssist.UnderlineBrush="Transparent"
+                         Style="{DynamicResource MaterialDesignFloatingHintRevealPasswordBox}"
+                         Margin="22,-6" Foreground="#AAADC4"   HorizontalAlignment="Center" Height="80"
+                         Width="534"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight"
+                         FontSize="24" ></PasswordBox>
+        </Border>
+        <Border Margin="344,523,0,0"  Background="White" BorderThickness="6" BorderBrush="#AAADC4"  Height="80"  CornerRadius="30"  Width="590" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <PasswordBox x:Name="confirmPassword" 
+                         materialDesign:HintAssist.Hint="Confirm Password"
+                         materialDesign:HintAssist.Foreground="#AAADC4"
+                         materialDesign:TextFieldAssist.UnderlineBrush="Transparent"
+                         Style="{DynamicResource MaterialDesignFloatingHintRevealPasswordBox}"
+                         Margin="22,-6" Foreground="#AAADC4"   HorizontalAlignment="Center" Height="80"
+                         Width="534"  VerticalAlignment="Center" FontFamily="Leelawadee UI Semilight"
+                         FontSize="24" ></PasswordBox>
+        </Border>
+
+
+
+
     </Grid>
 </Window>
